Upgraded to PROFESSIONAL luxury service cards

--- a/admin.html
+++ b/admin.html
@@ -1,123 +1,270 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- DRIVERWANDA ADMIN DASHBOARD - FINAL & 100% WORKING (November 17, 2025)
+    Reads from localStorage - shows ALL bookings, drivers, requests, cars
+    Works client-side (Vercel friendly) -->
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Driverwanda Admin Dashboard</title>
-    <link rel="stylesheet" href="css/admin-styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Open+Sans&display=swap"
-        rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Driverwanda Admin Dashboard</title>
+  <style>
+    :root{font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;color:#111;background:#f7f8fb}
+    body{margin:24px}
+    header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px}
+    h1{font-size:20px;margin:0}
+    .actions{display:flex;gap:8px;align-items:center}
+    button, .btn{background:#e53935;color:#fff;border:0;padding:8px 10px;border-radius:6px;cursor:pointer}
+    .btn.secondary{background:#2b6cb0}
+    section{background:#fff;padding:14px;border-radius:10px;box-shadow:0 2px 8px rgba(12,12,12,0.05);margin-bottom:18px}
+    table{width:100%;border-collapse:collapse;font-size:13px}
+    thead th{background:#f1f5f9;text-align:left;padding:10px;border-bottom:1px solid #e6eef8}
+    tbody td{padding:10px;border-bottom:1px solid #f1f5f9;vertical-align:middle}
+    img{max-width:100%;height:auto;border-radius:6px}
+    .delete-btn{background:#e53e3e;padding:6px 8px;border-radius:6px;color:#fff;border:0;cursor:pointer}
+    .small-img{width:80px;border-radius:6px}
+    .count{color:#555;font-size:13px;margin-left:8px}
+    .note{color:#666;font-size:13px;margin-top:6px}
+    @media (max-width:900px){
+     table, thead, tbody, th, td, tr{display:block}
+     thead{display:none}
+     tr{margin-bottom:12px;border-bottom:1px dashed #eee}
+     td{padding:8px;border:0}
+     td::before{content:attr(data-label);font-weight:600;display:block;margin-bottom:6px}
+    }
+  </style>
 </head>
-
 <body>
-    <header>
-        <h1>Driverwanda Admin Dashboard</h1>
-    </header>
-    <main>
-        <section id="bookings">
-            <h2>Bookings</h2>
-            <table id="bookings-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Car</th>
-                        <th>Date</th>
-                        <th>Duration</th>
-                        <th>Event</th>
-                        <th>Timestamp</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-        <section id="drivers">
-            <h2>Drivers</h2>
-            <table id="drivers-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Experience</th>
-                        <th>Languages</th>
-                        <th>License Category</th>
-                        <th>License Photo</th>
-                        <th>Driver Photo</th>
-                        <th>Timestamp</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-        <section id="driver-requests">
-            <h2>Driver Requests</h2>
-            <table id="driver-requests-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Event</th>
-                        <th>Date</th>
-                        <th>Duration</th>
-                        <th>Car Needed</th>
-                        <th>Timestamp</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-        <section id="car-postings">
-            <h2>Car Postings</h2>
-            <table id="car-postings-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Model</th>
-                        <th>Price ($/day)</th>
-                        <th>Availability</th>
-                        <th>Location</th>
-                        <th>Photo</th>
-                        <th>Timestamp</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-        <section id="car-sales">
-            <h2>Car Sales</h2>
-            <table id="car-sales-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Model</th>
-                        <th>Year</th>
-                        <th>Price ($)</th>
-                        <th>Location</th>
-                        <th>Photos</th>
-                        <th>Timestamp</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Driverwanda</p>
-    </footer>
-    <script src="js/admin-script.js"></script>
-</body>
+  <header>
+    <h1>Driverwanda Admin Dashboard</h1>
+    <div class="actions">
+     <button id="refreshBtn" class="btn secondary">Refresh</button>
+     <button id="logoutBtn" class="btn">Logout</button>
+    </div>
+  </header>
 
-</html>
+  <p class="note">This dashboard reads items saved in localStorage. Keys should follow the pattern: folder/uniqueId.json (folders: bookings, drivers, requests, postcars, sellcars).</p>
+
+  <!-- Bookings -->
+  <section>
+    <h2>Bookings</h2>
+    <table id="bookings-table">
+     <thead>
+       <tr>
+        <th>Name</th><th>Email</th><th>Phone</th><th>Car</th><th>Date</th><th>Duration</th><th>Event</th><th>Timestamp</th><th>Action</th>
+       </tr>
+     </thead>
+     <tbody></tbody>
+    </table>
+  </section>
+
+  <!-- Drivers -->
+  <section>
+    <h2>Drivers</h2>
+    <table id="drivers-table">
+     <thead>
+       <tr>
+        <th>Name</th><th>Email</th><th>Phone</th><th>Experience</th><th>Languages</th><th>License</th><th>License Photo</th><th>Photo</th><th>Timestamp</th><th>Action</th>
+       </tr>
+     </thead>
+     <tbody></tbody>
+    </table>
+  </section>
+
+  <!-- Driver Requests -->
+  <section>
+    <h2>Driver Requests</h2>
+    <table id="driver-requests-table">
+     <thead>
+       <tr>
+        <th>Name</th><th>Email</th><th>Phone</th><th>Event</th><th>Date</th><th>Duration</th><th>Car Needed</th><th>Timestamp</th><th>Action</th>
+       </tr>
+     </thead>
+     <tbody></tbody>
+    </table>
+  </section>
+
+  <!-- Car Postings -->
+  <section>
+    <h2>Car Postings</h2>
+    <table id="car-postings-table">
+     <thead>
+       <tr>
+        <th>Name</th><th>Email</th><th>Phone</th><th>Model</th><th>Price</th><th>Availability</th><th>Location</th><th>Photo</th><th>Timestamp</th><th>Action</th>
+       </tr>
+     </thead>
+     <tbody></tbody>
+    </table>
+  </section>
+
+  <!-- Car Sales -->
+  <section>
+    <h2>Car Sales</h2>
+    <table id="car-sales-table">
+     <thead>
+       <tr>
+        <th>Name</th><th>Email</th><th>Phone</th><th>Model</th><th>Year</th><th>Price</th><th>Location</th><th>Photos</th><th>Timestamp</th><th>Action</th>
+       </tr>
+     </thead>
+     <tbody></tbody>
+    </table>
+  </section>
+
+  <script>
+    const ADMIN_PASSWORD = "admin123"; // Change anytime you want
+
+    // Simple password protection (client-side)
+    if (prompt("Enter Admin Password:") !== ADMIN_PASSWORD) {
+     alert("Wrong password! Access denied.");
+     window.location.href = "index.html";
+    }
+
+    document.getElementById('refreshBtn').addEventListener('click', () => location.reload());
+    document.getElementById('logoutBtn').addEventListener('click', () => {
+     alert('Logging out');
+     window.location.href = 'index.html';
+    });
+
+    // Main function
+    document.addEventListener('DOMContentLoaded', () => {
+     const tables = {
+       bookings: document.querySelector('#bookings-table tbody'),
+       drivers: document.querySelector('#drivers-table tbody'),
+       requests: document.querySelector('#driver-requests-table tbody'),
+       postcars: document.querySelector('#car-postings-table tbody'),
+       sellcars: document.querySelector('#car-sales-table tbody')
+     };
+
+     // Clear all tables
+     Object.values(tables).forEach(tbody => tbody.innerHTML = '');
+
+     let totalCount = 0;
+
+     for (let i = 0; i < localStorage.length; i++) {
+       const key = localStorage.key(i);
+       if (!key || !key.includes('.json')) continue;
+
+       const jsonString = localStorage.getItem(key);
+       let data;
+       try { data = JSON.parse(jsonString); } catch (e) { continue; }
+
+       totalCount++;
+       const [folder] = key.split('/');
+
+       let tbody;
+       if (folder === 'bookings') tbody = tables.bookings;
+       else if (folder === 'drivers') tbody = tables.drivers;
+       else if (folder === 'requests') tbody = tables.requests;
+       else if (folder === 'postcars') tbody = tables.postcars;
+       else if (folder === 'sellcars') tbody = tables.sellcars;
+       else continue;
+
+       const tr = document.createElement('tr');
+
+       // Build row content per folder (exclude action cell; we'll append it safely)
+       if (folder === 'bookings') {
+        tr.innerHTML = `
+          <td data-label="Name">${escapeHtml(data.name || '')}</td>
+          <td data-label="Email">${escapeHtml(data.email || '')}</td>
+          <td data-label="Phone">${escapeHtml(data.phone || '')}</td>
+          <td data-label="Car">${escapeHtml(data.car || '')}</td>
+          <td data-label="Date">${escapeHtml(data.date || '')}</td>
+          <td data-label="Duration">${escapeHtml(data.duration || '')}</td>
+          <td data-label="Event">${escapeHtml(data.event || '')}</td>
+          <td data-label="Timestamp">${escapeHtml(data.timestamp || 'N/A')}</td>
+        `;
+       }
+       else if (folder === 'drivers') {
+        tr.innerHTML = `
+          <td data-label="Name">${escapeHtml(data.name || '')}</td>
+          <td data-label="Email">${escapeHtml(data.email || '')}</td>
+          <td data-label="Phone">${escapeHtml(data.phone || '')}</td>
+          <td data-label="Experience">${escapeHtml(data.experience || '')}</td>
+          <td data-label="Languages">${escapeHtml(data.languages || '')}</td>
+          <td data-label="License">${escapeHtml(data.license || '')}</td>
+          <td data-label="License Photo">${data.licensePhoto ? '<img src="' + escapeAttr(data.licensePhoto) + '" class="small-img">' : 'No'}</td>
+          <td data-label="Photo">${data.photo ? '<img src="' + escapeAttr(data.photo) + '" class="small-img">' : 'No'}</td>
+          <td data-label="Timestamp">${escapeHtml(data.timestamp || 'N/A')}</td>
+        `;
+       }
+       else if (folder === 'requests') {
+        tr.innerHTML = `
+          <td data-label="Name">${escapeHtml(data.name || '')}</td>
+          <td data-label="Email">${escapeHtml(data.email || '')}</td>
+          <td data-label="Phone">${escapeHtml(data.phone || '')}</td>
+          <td data-label="Event">${escapeHtml(data.event || '')}</td>
+          <td data-label="Date">${escapeHtml(data.date || '')}</td>
+          <td data-label="Duration">${escapeHtml(data.duration || '')}</td>
+          <td data-label="Car Needed">${escapeHtml(data.carNeeded || '')}</td>
+          <td data-label="Timestamp">${escapeHtml(data.timestamp || 'N/A')}</td>
+        `;
+       }
+       else if (folder === 'postcars') {
+        tr.innerHTML = `
+          <td data-label="Name">${escapeHtml(data.name || '')}</td>
+          <td data-label="Email">${escapeHtml(data.email || '')}</td>
+          <td data-label="Phone">${escapeHtml(data.phone || '')}</td>
+          <td data-label="Model">${escapeHtml(data.model || '')}</td>
+          <td data-label="Price">${escapeHtml(data.price || '')}</td>
+          <td data-label="Availability">${escapeHtml(data.availability || '')}</td>
+          <td data-label="Location">${escapeHtml(data.location || '')}</td>
+          <td data-label="Photo">${data.photo ? '<img src="' + escapeAttr(data.photo) + '" width="100">' : 'No'}</td>
+          <td data-label="Timestamp">${escapeHtml(data.timestamp || 'N/A')}</td>
+        `;
+       }
+       else if (folder === 'sellcars') {
+        const photosHtml = data.photos ? data.photos.split(',').map(p => '<img src="' + escapeAttr(p.trim()) + '" class="small-img">').join(' ') : 'No';
+        tr.innerHTML = `
+          <td data-label="Name">${escapeHtml(data.name || '')}</td>
+          <td data-label="Email">${escapeHtml(data.email || '')}</td>
+          <td data-label="Phone">${escapeHtml(data.phone || '')}</td>
+          <td data-label="Model">${escapeHtml(data.model || '')}</td>
+          <td data-label="Year">${escapeHtml(data.year || '')}</td>
+          <td data-label="Price">${escapeHtml(data.price || '')}</td>
+          <td data-label="Location">${escapeHtml(data.location || '')}</td>
+          <td data-label="Photos">${photosHtml}</td>
+          <td data-label="Timestamp">${escapeHtml(data.timestamp || 'N/A')}</td>
+        `;
+       }
+
+       // Create action cell and safe button with closure capture of key
+       const actionTd = document.createElement('td');
+       actionTd.setAttribute('data-label', 'Action');
+       const delBtn = document.createElement('button');
+       delBtn.className = 'delete-btn';
+       delBtn.textContent = 'Delete';
+       delBtn.addEventListener('click', () => deleteEntry(key));
+       actionTd.appendChild(delBtn);
+       tr.appendChild(actionTd);
+
+       tbody.appendChild(tr);
+     }
+
+     // Update header with total count
+     const heading = document.querySelector('h1');
+     if (heading) heading.textContent = `Driverwanda Admin Dashboard (${totalCount} entries)`;
+    });
+
+    // Delete function
+    function deleteEntry(key) {
+     if (!key) return;
+     if (confirm("Delete this entry permanently?")) {
+       localStorage.removeItem(key);
+       location.reload();
+     }
+    }
+
+    // Safe HTML output
+    function escapeHtml(text) {
+     const div = document.createElement('div');
+     div.textContent = text;
+     return div.innerHTML;
+    }
+
+    // Escape attribute (simple)
+    function escapeAttr(text) {
+     if (!text) return '';
+     return String(text).replace(/"/g, '&quot;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+    }
+  </script>
+</body>
+</html></div>
