--- a/index.html
+++ b/index.html
@@ -247,9 +247,46 @@
             </div>
         </div>
     </main>
+  <!-- PROFESSIONAL "NEED ANY SERVICE?" SECTION - LUXURY STYLE -->
+        <section class="services-cta">
+            <div class="services-container">
+                <h2 class="services-title">Need Any Service?</h2>
+                <p class="services-subtitle">For a day, a week, a month or long-term — we have the perfect solution!</p>
 
-    <!-- OXIMO-STYLE LUXURY FOOTER -->
-    <footer class="oximo-footer">
+                <div class="services-grid">
+                    <!-- CARD 1: Need a Driver -->
+                    <div class="service-card">
+                        <div class="card-icon">Driver</div>
+                        <h3>Need a Driver?</h3>
+                        <p>Hire a trusted, verified driver for any duration — weddings, tours, airport, daily use.</p>
+                        <button class="service-cta-btn" id="open-request-modal">Request a Driver Now</button>
+                    </div>
+
+                    <!-- CARD 2: Rent Out Your Car -->
+                    <div class="service-card">
+                        <div class="card-icon">Car</div>
+                        <h3>Own a Car?</h3>
+                        <p>Rent out your car safely and earn monthly income while it's not in use.</p>
+                        <button class="service-cta-btn" id="open-post-car-modal">Rent Out My Car</button>
+                    </div>
+
+                    <!-- CARD 3: Become a Driver -->
+                    <div class="service-card">
+                        <div class="card-icon"> Driving job</div>
+                        <h3>Want to Become a Driver?</h3>
+                        <p>Join our team — get steady jobs, good pay, and flexible hours across Rwanda.</p>
+                        <button class="service-cta-btn" id="open-driver-modal">Apply as Driver</button>
+                    </div>
+                </div>
+
+                <div class="services-contact">
+                    <p><strong>Any service you need — just contact us instantly!</strong></p>
+                    <p>WhatsApp or Call: <strong style="color:#25d366;">+250 780 229 271</strong></p>
+                </div>
+            </div>
+        </section>
+    <!--  LUXURY FOOTER -->
+    <footer class="my-footer">
         <div class="footer-container">
             <div class="footer-logo">
                 <h1>Driverwanda</h1>
