--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Driverwanda - Car Rentals & Driver Services in Rwanda</title>
+    
+    <title>Driverwanda — Hire Drivers & Rent Cars in Rwanda 24/7</title>
+    <meta name="description" content="Book trusted drivers and rent cars in Kigali, Volcanoes, Nyungwe, Gisenyi. Airport pickup, wedding cars, tours. Call/WhatsApp +250 780 229 271">
+    <meta name="keywords" content="driver rwanda, hire driver kigali, car rental rwanda, airport pickup kigali, wedding car rwanda, driver job rwanda, rent out car rwanda">
+    <meta name="author" content="Driverwanda">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Driverwanda — Rwanda's #1 Driver & Car Rental Service">
+    <meta property="og:description" content="Book drivers & rent cars 24/7 across Rwanda. Call/WhatsApp +250 780 229 271">
+    <meta property="og:url" content="https://driverwanda-website-ceg8i1bbt-ktheogene003-7279s-projects.vercel.app">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://driverwanda-website-ceg8i1bbt-ktheogene003-7279s-projects.vercel.app/image/og-image.jpg">
+
+    <!-- Google Search Console Verification — ALREADY ADDED -->
+    <meta name="google-site-verification" content="8AuRTDRdysWBCK45CB5oHBinRqVF_9kLmN2vX7pQj8c" />
+
+    <!-- PWA & Analytics -->
+    <meta name="theme-color" content="#25D366">
+    <link rel="apple-touch-icon" href="image/logo192.png">
+    <link rel="manifest" href="manifest.json">
+    <script defer src="/_vercel/insights/script.js"></script>
+
+    <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Open+Sans&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
