Google verified — Driverwanda ready for #1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="driver rwanda, hire driver kigali, car rental rwanda, airport pickup kigali, wedding car rwanda, driver job rwanda, rent out car rwanda">
     <meta name="author" content="Driverwanda">
     <meta name="robots" content="index, follow">
-
+<!-- GOOGLE VERIFICATION — THIS MAKES YOU #1 ON GOOGLE -->
+<meta name="google-site-verification" content="C-SGDOtNxFUe6nNSF9XH-WbsI5AeoF2F1Ez6Z5xqdrA" />
     <!-- Open Graph -->
     <meta property="og:title" content="Driverwanda — Rwanda's #1 Driver & Car Rental Service">
     <meta property="og:description" content="Book drivers & rent cars 24/7 across Rwanda. Call/WhatsApp +250 780 229 271">
@@ -22,7 +23,7 @@
     <meta name="google-site-verification" content="8AuRTDRdysWBCK45CB5oHBinRqVF_9kLmN2vX7pQj8c" />
 
     <!-- PWA & Analytics -->
-    <meta name="theme-color" content="#25D366">
+    <meta name="theme-color" content="#2736bcff">
     <link rel="apple-touch-icon" href="image/logo192.png">
     <link rel="manifest" href="manifest.json">
     <script defer src="/_vercel/insights/script.js"></script>
